tests/NormalTests/paczka1/fuzzy1/91176661.err
Error in line 1: 5eWliPxWGD S995 80,1
Error in line 8: 5eWliPxWGD S956 47,9
Error in line 12: xISHl2fgmk1 S995 75,40
Error in line 7: xISHl2fgmk1 S995 40,1
Error in line 15: xISHl2fgmk1 S{05 81,8
Error in line 13: xISHl2fgmk1 S627 90,1
Error in line 18: oFbrnDt S995 87,2
Error in line 19: xISHl2fgmk1 S905 314,1
Error in line 30: 1RdR0KaJzrZ S627 186,4
Error in line 34: 1RdR0KaJzrZ S995 45,7
Error in line 35: 1RdR0KaJzrZ S956 94,4
Error in line 17: S627 S995 86,2
